Avoid transient owner order publication and negative lane depth